src/tests/snapshots/cendol__tests__semantic_negative__enumerator_outside_enum.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: Undeclared identifier 'C'
Span: SourceSpan(source_id=SourceId(2), start=67, end=68)
