src/tests/snapshots/cendol__tests__semantic_negative__extern_init_block_scope.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: invalid initializer
Span: SourceSpan(source_id=SourceId(2), start=20, end=62)
