src/tests/snapshots/cendol__tests__semantic_negative__flexible_array_not_last.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: flexible array member must be the last member of a structure
Span: SourceSpan(source_id=SourceId(2), start=55, end=60)
