src/tests/snapshots/cendol__tests__semantic_negative__invalid_restrict.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: restrict requires a pointer type
Span: SourceSpan(source_id=SourceId(2), start=34, end=49)
