src/tests/snapshots/cendol__tests__semantic_negative__modifying_string_literal.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: cannot assign to read-only location
Span: SourceSpan(source_id=SourceId(2), start=35, end=52)
