src/tests/snapshots/cendol__tests__semantic_negative__scalar_init_brace_list.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: excess elements in scalar initializer
Span: SourceSpan(source_id=SourceId(2), start=42, end=48)
